[gd_scene load_steps=3 format=2]

[ext_resource path="res://default_theme.tres" type="Theme" id=1]
[ext_resource path="res://Menus/DebugLevelSelectionMenu.gd" type="Script" id=2]

[node name="DebugLevelSelectionMenu" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -780, -540 )
theme = ExtResource( 1 )
custom_constants/separation = 30
script = ExtResource( 2 )

[node name="SpaceLevelButton" type="Button" parent="."]
margin_right = 348.0
margin_bottom = 50.0
size_flags_horizontal = 0
text = "Space Test Level"

[node name="GroundLevelButton" type="Button" parent="."]
margin_top = 80.0
margin_right = 377.0
margin_bottom = 130.0
size_flags_horizontal = 0
text = "Ground Test Level"

[node name="MainMenuButton" type="Button" parent="."]
margin_top = 160.0
margin_right = 403.0
margin_bottom = 210.0
size_flags_horizontal = 0
text = "Back to Main Menu"
[connection signal="pressed" from="SpaceLevelButton" to="." method="_on_SpaceLevelButton_pressed"]
[connection signal="pressed" from="GroundLevelButton" to="." method="_on_GroundLevelButton_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
